@@ -1990,8 +1990,8 @@ namespace Thetis
                 comboTXProfileName.Items.Count > 0)
                 comboTXProfileName.SelectedIndex = 0;
 
-            if (loadTXProfile(comboTXProfileName.Text)) current_profile = comboTXProfileName.Text;
-            else current_profile = "";
+            if (loadTXProfile(comboTXProfileName.Text)) _current_profile = comboTXProfileName.Text;
+            else _current_profile = "";
 
             _gettingOptions = false;
         }
@@ -2903,7 +2903,7 @@ namespace Thetis
             if (drToCheck == null)
             {
                 // check everything in the TX profile
-                DataRow[] rows = getDataRowsForTXProfile(current_profile);// DB.ds.Tables["TXProfile"].Select("Name = '" + current_profile.Replace("'", "''") + "'"); 
+                DataRow[] rows = getDataRowsForTXProfile(_current_profile);// DB.ds.Tables["TXProfile"].Select("Name = '" + current_profile.Replace("'", "''") + "'"); 
 
                 if (rows.Length != 1)
                     return "";
@@ -3105,7 +3105,7 @@ namespace Thetis
             if (drToCheck == null)
             {
                 // check everything in the TX profile
-                DataRow[] rows = getDataRowsForTXProfile(current_profile);// DB.ds.Tables["TXProfile"].Select("Name = '" + current_profile.Replace("'", "''") + "'"); //MW0LGE_21k9rc6 replace ' for ''
+                DataRow[] rows = getDataRowsForTXProfile(_current_profile);// DB.ds.Tables["TXProfile"].Select("Name = '" + current_profile.Replace("'", "''") + "'"); //MW0LGE_21k9rc6 replace ' for ''
 
                 if (rows.Length != 1)
                     return false;
@@ -3685,7 +3685,7 @@ namespace Thetis
                 return;
             }
 
-            string name = current_profile;
+            string name = _current_profile;
 
             DataRow dr = null;
 
@@ -9177,6 +9177,33 @@ namespace Thetis
             console.TunePower = (int)udTXTunePower.Value;
         }
 
+        public int GetVACEnabledBitfield(string profile_name = "")
+        {
+            int bitfield = 0;            
+            if (string.IsNullOrEmpty(profile_name))
+            {
+                profile_name = _current_profile;
+            }
+            if (string.IsNullOrEmpty(profile_name))
+            {
+                profile_name = comboTXProfileName.Text;
+            }
+
+            if (string.IsNullOrEmpty(profile_name)) return bitfield;
+
+            DataRow[] rows = getDataRowsForTXProfile(profile_name);
+
+            if (rows.Length < 1) return bitfield;
+
+            DataRow row = rows[0];
+            for (int n = 0; n <= 1; n++) 
+            {
+                if ((bool)row[$"VAC{n + 1}_On"]) bitfield |= 1 << n;
+            }
+
+            return bitfield;
+        }
+
         private bool loadTXProfile(String sProfileName)
         {
             //
@@ -9429,7 +9456,7 @@ namespace Thetis
             comboTXProfileName_SelectedIndexChanged(this, EventArgs.Empty);
         }
 
-        private string current_profile = "";
+        private string _current_profile = "";
         private void comboTXProfileName_SelectedIndexChanged(object sender, System.EventArgs e)
         {
             if (comboTXProfileName.SelectedIndex < 0 || initializing)
@@ -9462,18 +9489,18 @@ namespace Thetis
 
             if (loadTXProfile(comboTXProfileName.Text))
             {
-                current_profile = comboTXProfileName.Text;
+                _current_profile = comboTXProfileName.Text;
             }
             else
             {
-                current_profile = "";
+                _current_profile = "";
             }
         }
 
         private void btnTXProfileSave_Click(object sender, System.EventArgs e)
         {
             string name = InputBox.Show("Save Profile", "Please enter a profile name:",
-                current_profile);
+                _current_profile);
 
             if (string.IsNullOrEmpty(name))
             {
@@ -12415,7 +12442,7 @@ namespace Thetis
         //-W2PA Export a single TX Profile to send to someone else for importing.
         private void ExportCurrentTxProfile()
         {
-            string fileName = current_profile;
+            string fileName = _current_profile;
 
             string invalid = new string(Path.GetInvalidFileNameChars()) + new string(Path.GetInvalidPathChars());
             foreach (char c in invalid)
@@ -12434,7 +12461,7 @@ namespace Thetis
 
             fileName = saveFileDialog.FileName;
 
-            DataRow[] rows = getDataRowsForTXProfile(current_profile);// DB.ds.Tables["TXProfile"].Select("Name = '" + current_profile.Replace("'", "''") + "'"); //MW0LGE_21k9rc6 replace ' for ''
+            DataRow[] rows = getDataRowsForTXProfile(_current_profile);// DB.ds.Tables["TXProfile"].Select("Name = '" + current_profile.Replace("'", "''") + "'"); //MW0LGE_21k9rc6 replace ' for ''
             DataRow exportRow = null;
             if (rows.Length > 0)
             {
@@ -12442,7 +12469,7 @@ namespace Thetis
             }
             else
             {
-                MessageBox.Show("Can not locate " + current_profile + ".",  // This should never happen.
+                MessageBox.Show("Can not locate " + _current_profile + ".",  // This should never happen.
                     "Profile error",
                     MessageBoxButtons.OK,
                     MessageBoxIcon.Error);
@@ -12481,7 +12508,7 @@ namespace Thetis
                 return;
             }
 
-            MessageBox.Show("Profile [" + current_profile + "] has been saved to the file\n" + fileName,
+            MessageBox.Show("Profile [" + _current_profile + "] has been saved to the file\n" + fileName,
                     "Done",
                     MessageBoxButtons.OK,
                     MessageBoxIcon.Information);
